# laba5

./: CMakeLists.txt  list_reading.cpp  list_reading.h  main.cpp  multisets.cpp  multisets.h  pair_of_tasks.cpp  pair_of_tasks.h  stream.cpp  stream.h  streets_surnames.cpp  streets_surnames.h  string_pair.cpp  string_pair.h  strings.cpp  strings.h  text_parser.cpp  text_parser.h  vector.cpp  vector.h
data/: input_strings.txt  input_text.txt  task5anser.txt  task5nums.txt  task5operations.txt
