cmake_minimum_required(VERSION 3.15)
project(laba5)

set(CMAKE_CXX_STANDARD 14)

add_executable(laba5 main.cpp multisets.h multisets.cpp strings.cpp strings.h text_parser.cpp text_parser.h string_pair.cpp string_pair.h list_reading.cpp list_reading.h pair_of_tasks.cpp pair_of_tasks.h streets_surnames.cpp streets_surnames.h vector.cpp vector.h)